--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -10,7 +10,7 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
-      [value]="pensamento.conteudo"
+      [(ngModel)]="pensamento.conteudo"
         >
       <label for="autoria">Autor(a) ou fonte</label>
       <input
@@ -19,7 +19,7 @@
         id="autoria"
         name="autoria"
         placeholder="Digite a autoria ou fonte"
-        [value]="pensamento.autoria"
+        [(ngModel)]="pensamento.autoria"
           >
           <label for="modelo">Selecione o modelo do card:</label>
 <div class="container-radio">
@@ -30,6 +30,7 @@
                 id="modelo1"
                 value="modelo1"
                 name="modelo-card"
+                [(ngModel)]="pensamento.modelo"
             >
             <div class="custom-radio">
                 <span></span>
@@ -52,6 +53,7 @@
               id="modelo2"
               value="modelo2"
               name="modelo-card"
+              [(ngModel)]="pensamento.modelo"
           >
           <div class="custom-radio">
               <span></span>
@@ -73,6 +75,7 @@
               id="modelo3"
               value="modelo3"
               name="modelo-card"
+              [(ngModel)]="pensamento.modelo"
           >
           <div class="custom-radio">
               <span></span>
@@ -90,7 +93,7 @@
 
 <div class="acoes">
   <button (click)="criarPensamento()" class="botao">Salvar</button>
-  <button (click)="criarAutoria()"  class="botao">Cancelar</button>
+  <button (click)="cancelar()"  class="botao">Cancelar</button>
 </div>
   </form>
 </section>
